--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,21 +3,21 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/node:16.13.2
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - run: npm i
       - run: npm run lint
   test:
     docker:
-      - image: cimg/node:16.13.2
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - run: npm i
       - run: npm run test
   analyze:
     docker:
-      - image: cimg/node:16.13.2
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - run: npm audit
